--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
+    "rimraf": "^5.0.7",
     "tailwindcss": "^3.4.4",
     "typescript": "~5.4.2"
   }
